reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_tuple12-4.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithTuple12"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithTuple12"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.basic.TestStructWithTuple12": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.TestStructWithTuple12",
        "required": [
          "_f"
        ],
        "properties": {
          "_f": {
            "description": "Tuple holding 12 elements",
            "type": "array",
            "prefixItems": [
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              }
            ]
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
